--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="style/css-reset.css" />
     <link rel="stylesheet" href="style/style.css" />
     <link rel="stylesheet" href="style/variable.css" />
-    <link rel="stylesheet" media="(max-width: 980px)" href="styles/mobile.css" />
+    <link rel="stylesheet" media="(max-width: 980px)" href="style/mobile.css" />
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20,400,0,0&icon_names=search" />
 </head>
@@ -42,24 +42,118 @@
             <div class="hero-image"></div>
             <div class="hero-description">
                 <article class="article-details">
-            <div class="badge-container">
-              <span class="hero-badge">Technology</span>
+                    <div class="badge-container">
+                        <span class="hero-badge">Technology</span>
+                    </div>
+                    <h1>
+                        <a href="#">
+                            The Impact of Technology on the Workplace: How Technology is
+                            Changing
+                        </a>
+                    </h1>
+                    <div class="author-section">
+                        <img src="./img/author.png" alt="Author" />
+                        <span class="author-name">Jason Francisco</span>
+                        <span class="author-date">January 20, 2025</span>
+                    </div>
+                </article>
             </div>
-            <h1>
-              <a href="#">
-                The Impact of Technology on the Workplace: How Technology is
-                Changing
-              </a>
-            </h1>
-            <div class="author-section">
-              <img src="./images/author.png" alt="Author" />
-              <span class="author-name">Jason Francisco</span>
-              <span class="author-date">January 20, 2025</span>
-            </div>
-          </article>
-        </div>
             </div>
         </section>
+        <!-- new section Latest posts -->
+        <section class="blog-section">
+            <h1>Latest Post</h1>
+            <div class="posts">
+                <article class="single-post">
+                    <img src="img/blog-image.png" alt="blog-image">
+                    <div class="article-details">
+                        <div class="badge-container">
+                            <span class="hero-badge">Technology</span>
+                        </div>
+                        <h2>
+                            <a href="#">
+                                The Impact of Technology on the Workplace: How Technology is
+                                Changing
+                            </a>
+                        </h2>
+                        <div class="author-section">
+                            <img src="./img/author.png" alt="Author" />
+                            <span class="author-name">Jason Francisco</span>
+                            <span class="author-date">January 20, 2025</span>
+                        </div>
+                    </div>
+                </article>
+                <article class="single-post">
+                    <img src="/img/Rectangle 38.png" alt="Blog Image" />
+                    <div class="article-details">
+                        <div class="badge-container">
+                            <span class="hero-badge">Technology</span>
+                        </div>
+                        <h2>
+                            <a href="#">
+                                The Impact of Technology on the Workplace: How Technology is
+                                Changing
+                            </a>
+                        </h2>
+                        <div class="author-section">
+                            <img src="./img/Image (2).png" alt="Author" />
+                            <span class="author-name">Jason Francisco</span>
+                            <span class="author-date">January 20, 2025</span>
+                        </div>
+                    </div>
+                </article>
+                <article class="single-post">
+                    <img src="/img/Rectangle 38 (1).png" alt="Blog Image" />
+                    <div class="article-details">
+                        <div class="badge-container">
+                            <span class="hero-badge">Technology</span>
+                        </div>
+                        <h2>
+                            <a href="#">
+                                The Impact of Technology on the Workplace: How Technology is
+                                Changing
+                            </a>
+                        </h2>
+                        <div class="author-section">
+                            <img src="./img/author.png" alt="Author" />
+                            <span class="author-name">Tracey Wilson</span>
+                            <span class="author-date">January 20, 2025</span>
+                        </div>
+                    </div>
+                </article>
+                <article class="single-post">
+                    <img src="/img/reactangle.png" alt="Blog Image" />
+                    <div class="article-details">
+                        <div class="badge-container">
+                            <span class="hero-badge">Technology</span>
+                        </div>
+                        <h2>
+                            <a href="#">
+                                The Impact of Technology on the Workplace: How Technology is
+                                Changing
+                            </a>
+                        </h2>
+                        <div class="author-section">
+                            <img src="./img/Image (2).png" alt="Author" />
+                            <span class="author-name">Ernie Smith</span>
+                            <span class="author-date">January 20, 2025</span>
+                        </div>
+                    </div>
+                </article>
+            </div>
+            <div class="view-all">
+                <a href="#">View All Posts</a>
+            </div>
+        </section>
+        <footer class="footer">
+            <div class="footer-wrapper">
+                <ul class="footer-links">
+                    <li><a href="#">Terms of Use</a></li>
+                    <li><a href="#">Privacy Policy</a></li>
+                    <li><a href="#">Cookie Policy</a></li>
+                </ul>
+            </div>
+        </footer>
     </main>
 </body>
 
