--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                     </div>
                 </article>
                 <article class="single-post">
-                    <img src="img/Rectangle 38.png" alt="Blog Image" />
+                    <img src="/img/Rectangle 38.png" alt="Blog Image" />
                     <div class="article-details">
                         <div class="badge-container">
                             <span class="hero-badge">Technology</span>
@@ -96,14 +96,14 @@
                             </a>
                         </h2>
                         <div class="author-section">
-                            <img src="img/Image (2).png" alt="Author" />
+                            <img src="/img/Image (2).png" alt="Author" />
                             <span class="author-name">Jason Francisco</span>
                             <span class="author-date">January 20, 2025</span>
                         </div>
                     </div>
                 </article>
                 <article class="single-post">
-                    <img src="img/Rectangle 38 (1).png" alt="Blog Image" />
+                    <img src="/img/Rectangle 38 (1).png" alt="Blog Image" />
                     <div class="article-details">
                         <div class="badge-container">
                             <span class="hero-badge">Technology</span>
@@ -122,7 +122,7 @@
                     </div>
                 </article>
                 <article class="single-post">
-                    <img src="img/reactangle.png" alt="Blog Image" />
+                    <img src="/img/reactangle.png" alt="Blog Image" />
                     <div class="article-details">
                         <div class="badge-container">
                             <span class="hero-badge">Technology</span>
